CCD-5867 extend UI endpoint for global search. Add test data and tests including pagination.